# memhack

./: .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/memory/: mod.rs  process.rs  regions.rs  scanner.rs  table.rs  types.rs  writer.rs
src/lib/: commands.ts
src/types/: index.ts
