[package]
name = "memhack"
version = "0.1.0"
edition = "2021"
description = "Personal memory editor"

[package.metadata.bundle]
name = "MemHack"
identifier = "com.memhack.app"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/icon.ico"]

[lib]
name = "memhack_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_Security",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
